avoid text overflow when users paste tweet links

--- a/src/main/resources/public/ui/css/main.css
+++ b/src/main/resources/public/ui/css/main.css
@@ -389,6 +389,7 @@ div.ht-result:nth-child(odd) {
     border-bottom-right-radius: 20px;
     text-align: left;
     white-space: pre-line;
+    overflow-wrap: break-word;
 }
 .ht-proposal-wbox {
     padding-top: 20px;
